[package]
name = "esp32-utils-crate"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-graphics = "0.8.1"
eg-seven-segment = "0.2.0"
embedded-sdmmc = { version = "0.7.0" }
profont = "0.7.0"
zune-png = { version = "0.4.10", default-features = false, features = ["log"] }
zune-jpeg = { version = "0.4.11", default-features = false, features = ["log"] }


